# VectorClaw

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_HANDOFF.md  ROADMAP.md  SECURITY.md  issue-pose-not-fully-functional.md  pr129_body.md  pr_planning_body.md  pyproject.toml  test_hardware_smoke.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
docs/: API_REFERENCE.md  FUNCTIONALITY_MATRIX.md  HARDWARE_SMOKE_EMPIRICAL_TEST_TEMPLATE.md  HARDWARE_SMOKE_LOG.md  HARDWARE_TEST_PLAYBOOK.md  HARDWARE_VALIDATION_2026-02-26.md  ISSUE_DRAFTS_NEXT_BATCH.md  LISTANIMATIONS_TIMEOUT_INVESTIGATION.md  MCP_API_REFERENCE.md  ONBOARDING_QUICKSTART.md  OPENCLAW_SETUP_SKILL.md  OPENCLAW_SKILL_PLAN.md  PRE_RELEASE_CHECKLIST.md  RELEASE_NOTES_V1_RC_DRAFT.md  RUNTIME_SUPPORT.md  SDK_AUDIT_PHASE1.md  SDK_FORK_PATCH_NOTES.md  SDK_FORK_STRATEGY.md  SDK_PATCH_NOTES.md  SDK_RELIABILITY_ANALYSIS.md  SDK_STRATEGY.md  SDK_TO_MCP_COVERAGE_MATRIX.md  SECURITY_ARCHITECTURE.md  SESSION_FORENSICS_LEDGER_2026-02-26_to_2026-02-27.md  SETUP.md  TOOL_DOCKING_PREREQUISITES.md  TROUBLESHOOTING.md  VECTOR_SDK_REFERENCE.md  WIREPOD_SDK_IMPLEMENTATION_GUIDE.md  WIREPOD_SDK_MCP_INTEGRATION_PRIORITIES.md  WIREPOD_SDK_REFERENCE.md  WIREPOD_SDK_SURFACE_REFERENCE.md
hardware_test_2026-02-28/: test_results.json
scripts/: sdk_test_harness.py
skill/: SKILL.md
tests/: conftest.py  test_compat.py  test_robot_manager.py  test_server_error_handling.py  test_setup_skill.py  test_tool_registry.py  test_tools.py  test_tools_motion.py  test_tools_perception.py  test_tools_setup.py
(+29 files in other folders)
